--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="col-md-6 text-center">
 
-          <img src="/portfolio/Images/Profile Img.jpg" alt="Profile Image " class="img-fluid w-75">
+          <img src="./portfolio/Images/Profile Img.jpg" alt="Profile Image " class="img-fluid w-75">
 
         </div>
 
