--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/portfolio/css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -88,7 +88,7 @@
         </div>
         <div class="col-md-6 text-center">
 
-          <img src="./portfolio/Images/Profile Img.jpg" alt="Profile Image " class="img-fluid w-75">
+          <img src="./Images/Profile Img.jpg" alt="Profile Image " class="img-fluid w-75">
 
         </div>
 
@@ -113,7 +113,7 @@
         <div class="col-md-3">
 
           <div class="card text-center">
-            <img src="/portfolio/Images/html.png" class="card-img-top w-25 m-auto pt-4" alt="html">
+            <img src="./Images/html.png" class="card-img-top w-25 m-auto pt-4" alt="html">
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
               <p class="card-text">HTML5 (Hypertext Markup Language 5) is a markup language used for structuring and presenting hypertext documents on the World Wide Web.
@@ -125,7 +125,7 @@
         <div class="col-md-3">
 
           <div class="card text-center">
-            <img src="/portfolio/Images/css.png" class="card-img-top w-25 m-auto pt-4" alt="html">
+            <img src="./Images/css.png" class="card-img-top w-25 m-auto pt-4" alt="html">
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
               <p class="card-text">
@@ -137,7 +137,7 @@
         <div class="col-md-3">
 
           <div class="card text-center">
-            <img src="/portfolio/Images/Javascript.jpeg" class="card-img-top w-25 m-auto pt-4" alt="html">
+            <img src="./Images/Javascript.jpeg" class="card-img-top w-25 m-auto pt-4" alt="html">
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
               <p class="card-text">JavaScript is a text-based programming language used both on the client-side and server-side that allows you to make web pages interactive. 
@@ -149,7 +149,7 @@
         <div class="col-md-3">
 
           <div class="card text-center">
-            <img src="/portfolio/Images/java.png" class="card-img-top w-25 m-auto pt-3" alt="html">
+            <img src="./Images/java.png" class="card-img-top w-25 m-auto pt-3" alt="html">
             <div class="card-body">
               <h5 class="card-title">JAVA</h5>
               <p class="card-text">Java is a popular programming language. Java is used to develop mobile apps, web apps, desktop apps, games and much more.
