--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
           <div class="w-75 m-auto">
 
-            <h1 class="pb-3">HI MY NAME IS SIVABALAN S</h1>
-            <h4 class="pb-4">I am a Software Developer at Infosys with 1 year of experience, I have a skills on Development - JAVA - Html - Css - JavaScript - Jquery - Bootstrap - MySQL | Leveling up in Android Development</h4>
+            <h1>HI MY NAME IS SIVABALAN S</h1>
+            <h4>I am a Software Developer at Infosys with 1 year of experience, I have a skills on Development - JAVA - Html - Css - JavaScript - Jquery - Bootstrap - MySQL | Leveling up in Android Development</h4>
 
               <a href="https://wa.me/+918667389339?text=Hi Sivabalan !!!" class="btn btn-dark btn-lg text-uppercase" target="_blank">Connect with me !</a>
             
